<resources>

    <string name="app_name">JComic</string>
    <string name="menu_settings">Settings</string>
    <string name="author">Author:</string>
    <string name="art">Icons made by:</string>
    <string name="translations">English > French translations:</string>
    <string name="contributions">Third-party contributions:</string>
    <string name="loading">Loading - Please wait</string>
    <string name="caching">Loading - Try again in one second</string>
    <string name="loading_next">Loading next image - Please wait</string>
    <string name="loading_progress">Loading - Please wait until processing is complete</string>
    <string name="cant_go_up">Can\'t go up any further</string>
    <string name="cancel_selection">[Cancel]</string>
    <string name="up_directory">[Up]</string>
    <string name="home_directory">[Home]</string>
    <string name="no_images">No supported images found</string>
    <string name="unsupported_file">Unsupported file: </string>
    <string name="end_of_chapter">End of chapter</string>
    <string name="start_of_chapter">Start of chapter</string>
    <string name="setting_zoom">Default zoom: </string>
    <string name="setting_orientation">Orientation: </string>
    <string name="setting_session">Save previous session</string>
    <string name="setting_recent">Save list of recently viewed files</string>
    <string name="setting_location">Default comic location</string>
    <string name="setting_backlight">Keep screen on while reading</string>
    <string name="setting_general">General</string>
    <string name="setting_performance">Performance</string>
    <string name="setting_pro">Advanced</string>
    <string name="setting_archive">Archive mode</string>
    <string name="setting_cache">Cache mode</string>
    <string name="setting_resize">Dynamic resizing</string>
    <string name="setting_loop">Loop mode</string>
    <string name="setting_ram">RAM Mode</string>
    <string name="setting_disk">Disk Mode</string>
    <string name="setting_reset">Reset default settings</string>
    <string name="setting_extract_mode">Progressive archive extraction</string>
    <string name="advanced_setting_cache_level">Cache level</string>
    <string name="advanced_setting_recursion_level">Recursion level</string>
    <string name="version">Version:</string>
    <string name="description_read">Read</string>
    <string name="description_settings">Settings</string>
    <string name="description_help">Help</string>
    <string name="description_credits">Credits</string>
    <string name="tab_recent">Recent</string>
    <string name="tab_files">Files</string>
    <string name="tab_favorite">Favorites</string>
    <string name="recent_no_recent_files">No recently viewed files</string>
    <string name="recent_function_disabled">You have disabled this feature.</string>
    <string name="recent_general_settings">It can be re-enabled in General Settings.</string>
    <string name="favorite_no_favorites">You do not currently have any favorites saved.</string>
    <string name="file_does_not_exist">File no longer exists or could not be read.</string>
    <string name="file_folder_and_contents">folder and its contents</string>
    <string name="file_file">file</string>
    <string name="file_confirm">Yes</string>
    <string name="file_deny">No</string>
    <string name="file_delete_prompt">Are you sure you want to delete this </string>
    <string name="file_delete_successful">File(s) deleted successfully</string>
    <string name="file_folder_delete_fail">One or more of the files in the specified folder could not be deleted</string>
    <string name="file_file_delete_fail">File could not be deleted</string>
    <string name="file_name">Name: </string>
    <string name="file_size">Size: </string>
    <string name="file_no_supported">No supported files found.</string>
    <string name="file_remove_favorite">Remove from favorites</string>
    <string name="file_remove_recent">Remove from recent</string>
    <string name="file_clear_favorite">Clear favorites</string>
    <string name="file_clear_recent">Clear recent</string>
    <string name="file_date_last_modified">Date last modified:</string>
    <string name="file_size_bytes">Bytes</string>
    <string name="file_size_kilobytes">KB</string>
    <string name="file_size_megabytes">MB</string>
    <string name="file_size_gigabytes">GB</string>
    <string name="credit_by">by</string>
    <string name="string_zoom">zoom</string>
    <string name="archive_read_error">Archive could not be read</string>
    <string name="archive_index_error">This archive cannot be indexed.</string>
    <string name="archive_index_error2">Extract instead?</string>
    <string name="advanced_cache_safety">Enable cache safety</string>
    <string name="setting_double_tap">Double tap:</string>
    <string name="setting_cache_on_startup">Cache on startup</string>
    <string name="setting_keep_zoom_page_change">Keep zoom on page change</string>
    <string name="zip_no_supported_images">No supported images to zip</string>
    <string name="zip_no_supported_archive">Not a supported archive</string>
    <string name="zip_already_exists">Zip archive already exists</string>
    <string name="zip_successfully_created">Archive created successfully</string>
    <string name="zip_directory_creation_failed">Conflicting file exists; couldn\'t create folder</string>
    <string name="zip_successfully_extracted">Archive extracted successfully</string>
    <string name="zip_extract_failed">Archive extraction failed</string>
    <string name="zip_operation_running">Archive operation in progress</string>
    <string name="zip_extract_in_progress">Extracting</string>
    <string name="zip_zipping_in_progress">Zipping</string>
    <string name="rating">Enjoying this app? Let me know what you think by rating and/or reviewing JComic.</string>
    <string name="rating_problem">Encountered problems? Please send an error report instead and help me improve JComic.</string>
    <string name="rating_button">Rate/Review</string>
    <string name="error_button">Report error</string>
    <string name="send_error_report">Send report</string>
    <string name="setting_context_menu">Enable context menu</string>
    <string name="setting_context_menu_head">Commands</string>
    <string name="setting_back_to_file_chooser">Always return from comic to file chooser</string>
    <string name="setting_context_menu_heading">Select Page</string>
    <string name="setting_rar_password">Enable password-protected rar archives</string>
    <string name="setting_rar_password_enter">Enter password</string>
    <string name="error_report_line_1">Error log detected</string>
    <string name="error_report_line_2">Send to developer?</string>
    <string name="error_report_para_1">If you have encountered an error, but weren\'t able to report the error at the time (or you simply want to add a personal note on the matter), you can send me an email directly by clicking the link below.</string>
    <string name="error_report_para_2">I will read any error reports I receive, so please enter as many details as you can. eg. If you encountered a problem while reading an image/archive, sending me information about the file, such as its size, format, etc. (or the file itself) would help tremendously.</string>
    <string name="error_report_para_3">By default, JComic will include the make and model of your device, the version of Android you are running, and the version of JComic you are using. You are free to remove these details if you don\'t want to include them, but the Android and JComic versions in particular are very useful when debugging.</string>
    <string-array name="general_setting_default_zoom">
        <item>Auto</item>
        <item>25%</item>
        <item>50%</item>
        <item>66%</item>
        <item>75%</item>
        <item>100%</item>
        <item>150%</item>
        <item>200%</item>
        <item>Scale to Height</item>
        <item>Scale to Width</item>
    </string-array>   
    <string-array name="general_setting_orientation">
        <item>Auto</item>
        <item>Portrait</item>
        <item>Landscape</item>
    </string-array>   
    <string-array name="performance_setting_ram_mode">
        <item>RAM Mode</item>
        <item>Disk Mode</item>
    </string-array>    
    <string-array name="performance_setting_archive_mode">
        <item>Default</item>
        <item>Index</item>
        <item>Progressive extraction</item>
    </string-array>    
    <string-array name="performance_setting_cache_mode">
        <item>Bi-directional</item>
        <item>Forward</item>
        <item>Backward</item>
    </string-array>     
    <string-array name="performance_setting_resize_mode">
        <item>Disabled</item>
        <item>Enabled</item>
        <item>Only if image is too big</item>
    </string-array>    
    <string-array name="advanced_setting_cache">
        <item>0 (disabled)</item>
        <item>1</item>
        <item>2 (default)</item>
    </string-array>    
    <string-array name="advanced_setting_recursion">
        <item>0</item>
        <item>1 (default)</item>
        <item>2</item>
        <item>All (not recommended)</item>
    </string-array>
    <string-array name="array_context_file_rw">
        <item>Read</item>
        <item>Delete</item>
        <item>Properties</item>
        <item>Scan</item>
        <item>Set as Favorite</item>
    </string-array>
    <string-array name="array_context_archive_rw">
        <item>Read</item>
        <item>Delete</item>
        <item>Properties</item>
        <item>Scan</item>
        <item>Set as Favorite</item>
        <item>Extract here</item>
        <item>Extract and delete</item>
    </string-array>
    <string-array name="array_context_file_r">
        <item>Read</item>
        <item>Properties</item>
        <item>Scan</item>
        <item>Set as Favorite</item>
    </string-array>
    <string-array name="array_context_dir_rw">
        <item>Open</item>
        <item>Read</item>
        <item>Delete</item>
        <item>Properties</item>
        <item>Scan</item>
        <item>Set as Favorite</item>
        <item>Zip supported images</item>
        <item>Zip and delete</item>
    </string-array>
    <string-array name="array_context_dir_r">
        <item>Open</item>
        <item>Read</item>
        <item>Properties</item>
        <item>Scan</item>
        <item>Set as Favorite</item>
    </string-array>
    <string-array name="array_double_tap">
        <item>Cycle zoom</item>
        <item>Zoom in</item>
        <item>Zoom out</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="array_context_menu">
        <item>First page</item>
        <item>Last page</item>
        <item>Go to page…</item>
    </string-array>

</resources>