<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical" >

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtVersion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/contributions"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/source"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/txtRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxEms="30"
            android:text="@string/rating"
            android:layout_margin="10dp"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" >

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                style="@style/CardButton"
                >

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rating_button"
                    android:background="@android:color/transparent"
                    android:onClick="creditsBtnRateApp"
                    />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".5"
                style="@style/CardButton"
                >

                <android.support.v7.widget.AppCompatButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error_button"
                    android:background="@android:color/transparent"
                    android:onClick="creditsBtnReportError"
                    />

            </android.support.v7.widget.CardView>

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>
    
</ScrollView>
